--- a/yee.html
+++ b/yee.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>         <!--현재는 HTML5 파일이다.-->
-<html lang="en">        <!--최상위(root) 요소-->
-<head>                  <!--제목, 스크립트, 스타일이 head 안에 위치한다.-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <title>04Digitalclock</title>
-    <script>                    // js 코드 자
-    //현재 시각을 표시하는 함수 정의
+    <script>
         function displayTime(){
-            var elt = document.getElementById("clock"); // id="clock"으 로요 소찾기
-            var now = new Date();                       // 현재 시각 가져오
-            elt.innerHTML = now.toLocaleTimeString();  // elt에 시간을 보여주게 만든다.
-            setTimeout(displayTime, 1000);              // 1초 후에 재실행
+            var elt = document.getElementById("clock");
+            var now = new Date();
+            elt.innerHTML = now.toLocaleTimeString();
+            setTimeout(displayTime, 1000);
         }
-        window.onload = displayTime;            // 문서가 로드될 때 시간을 노출하라.
+        window.onload = displayTime;
     </script>
-    <style>     /*시계의 CSS 스타일시트 한 벌*/
-        #clock{                     /*id = "clock"인 요소에 스타일을 적용한다.*/
-            font : bold 24pt sans;  /*크고 굵은 글꼴을 사용*/
-            background : #ddf;      /*밝은 남회색을 배경색으로 <!--제목, 스크립트, 스타일이-->사용*/
-            padding :10px;          /*약간의 공백으로 둘러쌈*/
-            border : solid black 2px;/*그리고 검은 실선 테두리*/
-            border-radius : 10px;    /*지원하면 모서리를 둥글게*/
+    <style>
+        #clock{
+            font : bold 24pt sans;
+            background : #ddf;
+            padding :10px;
+            border : solid black 2px;
+            border-radius : 10px;
         }
     </style>
 </head>
-<body>                      <!--body는 문서에서 노출되는 부분이다.-->
+<body>
 <h1>Digital Clock</h1>
 <span id = "clock"></span>
 </body>
