--- a/index.html
+++ b/index.html
@@ -1,29 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>04Digitalclock</title>
-    <script>
-        function displayTime(){
-            var elt = document.getElementById("clock");
-            var now = new Date();
-            elt.innerHTML = now.toLocaleTimeString();
-            setTimeout(displayTime, 1000);
-        }
-        window.onload = displayTime;
-    </script>
-    <style>
-        #clock{
-            font : bold 24pt sans;
-            background : #ddf;
-            padding :10px;
-            border : solid black 2px;
-            border-radius : 10px;
-        }
-    </style>
-</head>
-<body>
-<h1>Digital Clock</h1>
-<span id = "clock"></span>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <title>Hello HTML</title>
+  </head>
+  <body>
+    <p>Hello World!</p>
+  </body>
 </html>
